[package]
name = "tunl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "schema_generator"
path = "src/schema_generator.rs"

[dependencies]
tokio = { version = "1.28", features = ["io-util", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
worker = "0.0.18"
cidr = { version = "0.2", features = ["serde"] }
lazy_static = "1.4"
futures-util = "0.3.28"
pin-project-lite = "0.2"
uuid = { version = "1.8.0", features = ["serde"] }
bytes = "1.4.0"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
md-5 = "0.10"
toml = "0.8"
fastrand = "2.1"
async-trait = "0.1"
schemars = { version = "0.8", features = ["uuid1"] }
bincode = "2.0.0-rc.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
